--- a/notebooks/char_rnn_sample_tutorial.ipynb
+++ b/notebooks/char_rnn_sample_tutorial.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 3,
    "metadata": {
     "collapsed": false
    },
@@ -19,9 +19,6 @@
     "# Import Packages\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
-    "from tensorflow.models.rnn import rnn_cell\n",
-    "from tensorflow.models.rnn import seq2seq\n",
-    "\n",
     "import collections\n",
     "import argparse\n",
     "import time\n",
@@ -32,7 +29,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "metadata": {
     "collapsed": false
    },
@@ -47,7 +44,7 @@
    ],
    "source": [
     "# Load chars and vocab\n",
-    "load_dir = \"/tmp/tf_logs/char_rnn_tutorial\"\n",
+    "load_dir = \"data/linux_kernel\"\n",
     "with open(os.path.join(load_dir, 'chars_vocab.pkl'), 'rb') as f:\n",
     "    chars, vocab = cPickle.load(f)\n",
     "vocab_size = len(vocab) \n",
@@ -64,7 +61,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 6,
    "metadata": {
     "collapsed": false
    },
@@ -86,8 +83,8 @@
     "seq_length = 1\n",
     "\n",
     "# Construct RNN model \n",
-    "unitcell   = rnn_cell.BasicLSTMCell(rnn_size)\n",
-    "cell       = rnn_cell.MultiRNNCell([unitcell] * num_layers)\n",
+    "unitcell   = tf.nn.rnn_cell.BasicLSTMCell(rnn_size)\n",
+    "cell       = tf.nn.rnn_cell.MultiRNNCell([unitcell] * num_layers)\n",
     "input_data = tf.placeholder(tf.int32, [batch_size, seq_length])\n",
     "istate     = cell.zero_state(batch_size, tf.float32)\n",
     "# Weigths \n",
@@ -115,7 +112,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 7,
    "metadata": {
     "collapsed": false
    },
@@ -124,7 +121,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/tmp/tf_logs/char_rnn_tutorial/model.ckpt-8000\n"
+      "data/linux_kernel/model.ckpt-8000\n"
      ]
     }
    ],
@@ -148,7 +145,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 8,
    "metadata": {
     "collapsed": false
    },
@@ -160,53 +157,54 @@
       "Sampling Done. \n",
       "___________________________________________\n",
       "\n",
-      "/* *syscblanim types when the formathing)\n",
-      "\n",
-      " */\n",
-      "\n",
-      "void console_dir(tmp_cgroup_shorts);\n",
-      "\n",
-      "/*\n",
-      " * This already (proces6or\n",
-      " * @pid_struct(__kthread_lock\n",
-      "\tunlatelf if (subskick_map shoulds (the softwach then as up is\n",
-      "   boot fields up posix are HRPS5/\n",
-      "\n",
-      "int set_futex_intend_head_unintvel_ap,\n",
-      "\t.max_acquire(void, test_cpu(&rq->load, sizeof(struct file *g),\n",
-      "\t\t(singlec_ns);\n",
-      "\n",
-      "int EAVECLERPE\n",
-      "}6\n",
-      "\trlim_polic_entires;\n",
+      "/*  :  A C. Fruemptly etweennars must be serversed */\n",
+      "static int __cgroup_hash_power(struct rt_mutex_d *uaddr, int watab, long\n",
+      "-XIT_PYS__AUTIMER_PAT(seed_class_table_watch, v1->curr);\n",
       "}\n",
       "\n",
-      "static void audit_unlock_irq(struct helds, void cpu_stattr_namespace(__kprobess) ISusyoffreings void)\n",
+      "static void down_cpusets(struct pid;\n",
+      "static int pid_thread(voids_mm)\n",
       "{\n",
-      "\tif (!res->panicalings)\n",
-      "\t\tgoto root = ATOST_MEM:\n",
-      "\t\tp >= d = __delayed_poffset;\n",
-      "\t\t*strt' = delta_event_fs_allowed;\n",
-      "\t\tBUG_ON(!oops->list, new_audit_lock);\n",
+      "\tif (ps->cpumainte_to_cgroup_grp <= NULL)\n",
+      "\t\treturn 0;\n",
+      "}\n",
+      "\n",
+      "conset sched_VRICE_SOFTIRQ_DISU{\n",
+      "\tsoftirq_signal(this_css_set_bytes));\n",
+      "}\n",
+      "\n",
+      "void private = {\n",
+      "\t\t.mode\t\t= CPUCLOCK_BALANCE,\n",
+      "\t\t.process\t\t= optime)\n",
+      "\n",
+      "/*\n",
+      " * The are\n",
+      " *\ten\n",
+      " * @buf' - for so allows the condext it of it regions)\n",
+      " * massessiging that   Sto be stime in the expoxes\n",
+      " */\n",
+      "void __fsix;\n",
+      "\tstruct audit_chunk *tsk;\n",
+      "\n",
+      "\tkey_utvec_oper(struct *read_ns, struct futex_ckernel);\n",
+      "\tint atomic_attime = res->init_switch(void),\n",
+      "\t\t\t    -+signal->state = 0;\n",
+      "\ttmr = tmp;\n",
+      "\tprintk(\"%s\\n\", signal, &max_huts_string, 1, look_t *)(modemask++);\n",
+      "\tup_sem(cft, &(max))) {\n",
+      "\t\tif (probes)\n",
+      "\t\t\tset_cpu(name == 0)\n",
+      "\t\t\tgoto out;\n",
       "\t}\n",
       "\n",
-      "\tfreepstart;\n",
-      "\tlong d;\n",
+      "\tpposs_unlock(*pefmask_plocks);\n",
+      "\taudit_log_lock_fuces(rq);\n",
+      "}\n",
       "\n",
-      "\tatomic_expid(table, flags);\n",
-      "\tsubbufs_pid_t now;\n",
-      "\tidle = &pi_state->flags; maxRetect_call(aggm_natch);\n",
+      "static void again;\n",
       "\n",
-      "\treturn printk(*fa->tv_softirqs_entry) {\n",
-      "\t\taddress,\n",
-      "\t\t.cquient(i)\n",
-      "\t\tgoto ops_type = seq_rese,\n",
-      "};\n",
-      "\n",
-      "static struct head_stats {\n",
-      "\tstruct trans_ctly *next;\n",
-      "\n",
-      "\t/* Ax or with unbless and just even notifier restart= r\n"
+      "int\n",
+      "con\n"
      ]
     }
    ],
