--- a/notebooks/char_rnn_train_tutorial.ipynb
+++ b/notebooks/char_rnn_train_tutorial.ipynb
@@ -19,9 +19,6 @@
     "# Import Packages\n",
     "import numpy as np\n",
     "import tensorflow as tf\n",
-    "from tensorflow.models.rnn import rnn_cell\n",
-    "from tensorflow.models.rnn import seq2seq\n",
-    "\n",
     "import collections\n",
     "import argparse\n",
     "import time\n",
@@ -49,7 +46,7 @@
     "# Load text\n",
     "# data_dir    = \"data/tinyshakespeare\"\n",
     "data_dir    = \"data/linux_kernel\"\n",
-    "save_dir    = \"/tmp/tf_logs/char_rnn_tutorial\"\n",
+    "save_dir    = \"data/linux_kernel\"\n",
     "input_file  = os.path.join(data_dir, \"input.txt\")\n",
     "with open(input_file, \"r\") as f:\n",
     "    data = f.read()\n",
@@ -107,7 +104,7 @@
    "execution_count": 4,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
@@ -293,8 +290,8 @@
     "grad_clip  = 5.\n",
     "\n",
     "# Construct RNN model \n",
-    "unitcell   = rnn_cell.BasicLSTMCell(rnn_size)\n",
-    "cell       = rnn_cell.MultiRNNCell([unitcell] * num_layers)\n",
+    "unitcell   = tf.nn.rnn_cell.BasicLSTMCell(rnn_size)\n",
+    "cell       = tf.nn.rnn_cell.MultiRNNCell([unitcell] * num_layers)\n",
     "input_data = tf.placeholder(tf.int32, [batch_size, seq_length])\n",
     "targets    = tf.placeholder(tf.int32, [batch_size, seq_length])\n",
     "istate     = cell.zero_state(batch_size, tf.float32)\n",
@@ -316,13 +313,13 @@
     "    in order to generate the i+1-st input, and decoder_inputs will be ignored,\n",
     "    except for the first element (\"GO\" symbol).\n",
     "\"\"\" \n",
-    "outputs, last_state = seq2seq.rnn_decoder(inputs, istate, cell\n",
+    "outputs, last_state = tf.nn.seq2seq.rnn_decoder(inputs, istate, cell\n",
     "                , loop_function=None, scope='rnnlm')\n",
     "output = tf.reshape(tf.concat(1, outputs), [-1, rnn_size])\n",
     "logits = tf.nn.xw_plus_b(output, softmax_w, softmax_b)\n",
     "probs  = tf.nn.softmax(logits)\n",
     "# Loss\n",
-    "loss = seq2seq.sequence_loss_by_example([logits], # Input\n",
+    "loss = tf.nn.seq2seq.sequence_loss_by_example([logits], # Input\n",
     "    [tf.reshape(targets, [-1])], # Target\n",
     "    [tf.ones([batch_size * seq_length])], # Weight \n",
     "    vocab_size)\n",
@@ -343,115 +340,115 @@
    "execution_count": 8,
    "metadata": {
     "collapsed": false,
-    "scrolled": true
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[0/8500] cost: 5.0171 / Each batch learning took 3.6477 sec\n",
-      "model saved to '/tmp/tf_logs/char_rnn_tutorial/model.ckpt'\n",
-      "[100/8500] cost: 3.0563 / Each batch learning took 0.2976 sec\n",
-      "[200/8500] cost: 2.5019 / Each batch learning took 0.2980 sec\n",
-      "[300/8500] cost: 2.3639 / Each batch learning took 0.3063 sec\n",
-      "[400/8500] cost: 2.1694 / Each batch learning took 0.3087 sec\n",
-      "[500/8500] cost: 1.9351 / Each batch learning took 0.3001 sec\n",
-      "model saved to '/tmp/tf_logs/char_rnn_tutorial/model.ckpt'\n",
-      "[600/8500] cost: 1.8762 / Each batch learning took 0.3201 sec\n",
-      "[700/8500] cost: 1.7326 / Each batch learning took 0.2898 sec\n",
-      "[800/8500] cost: 1.7179 / Each batch learning took 0.3152 sec\n",
-      "[900/8500] cost: 1.6629 / Each batch learning took 0.3083 sec\n",
-      "[1000/8500] cost: 1.5743 / Each batch learning took 0.3111 sec\n",
-      "model saved to '/tmp/tf_logs/char_rnn_tutorial/model.ckpt'\n",
-      "[1100/8500] cost: 1.5780 / Each batch learning took 0.3154 sec\n",
-      "[1200/8500] cost: 1.4259 / Each batch learning took 0.3031 sec\n",
-      "[1300/8500] cost: 1.5518 / Each batch learning took 0.2991 sec\n",
-      "[1400/8500] cost: 1.4827 / Each batch learning took 0.2994 sec\n",
-      "[1500/8500] cost: 1.4770 / Each batch learning took 0.3056 sec\n",
-      "model saved to '/tmp/tf_logs/char_rnn_tutorial/model.ckpt'\n",
-      "[1600/8500] cost: 1.4718 / Each batch learning took 0.2941 sec\n",
-      "[1700/8500] cost: 1.4589 / Each batch learning took 0.2946 sec\n",
-      "[1800/8500] cost: 1.4057 / Each batch learning took 0.3001 sec\n",
-      "[1900/8500] cost: 1.3665 / Each batch learning took 0.3129 sec\n",
-      "[2000/8500] cost: 1.4157 / Each batch learning took 0.2923 sec\n",
-      "model saved to '/tmp/tf_logs/char_rnn_tutorial/model.ckpt'\n",
-      "[2100/8500] cost: 1.3979 / Each batch learning took 0.2994 sec\n",
-      "[2200/8500] cost: 1.3127 / Each batch learning took 0.2901 sec\n",
-      "[2300/8500] cost: 1.3253 / Each batch learning took 0.2888 sec\n",
-      "[2400/8500] cost: 1.2823 / Each batch learning took 0.2932 sec\n",
-      "[2500/8500] cost: 1.3026 / Each batch learning took 0.3117 sec\n",
-      "model saved to '/tmp/tf_logs/char_rnn_tutorial/model.ckpt'\n",
-      "[2600/8500] cost: 1.2777 / Each batch learning took 0.2820 sec\n",
-      "[2700/8500] cost: 1.2513 / Each batch learning took 0.2992 sec\n",
-      "[2800/8500] cost: 1.2980 / Each batch learning took 0.2860 sec\n",
-      "[2900/8500] cost: 1.1499 / Each batch learning took 0.2929 sec\n",
-      "[3000/8500] cost: 1.2884 / Each batch learning took 0.2914 sec\n",
-      "model saved to '/tmp/tf_logs/char_rnn_tutorial/model.ckpt'\n",
-      "[3100/8500] cost: 1.2466 / Each batch learning took 0.3102 sec\n",
-      "[3200/8500] cost: 1.2697 / Each batch learning took 0.2925 sec\n",
-      "[3300/8500] cost: 1.2659 / Each batch learning took 0.2966 sec\n",
-      "[3400/8500] cost: 1.2922 / Each batch learning took 0.2916 sec\n",
-      "[3500/8500] cost: 1.2352 / Each batch learning took 0.3017 sec\n",
-      "model saved to '/tmp/tf_logs/char_rnn_tutorial/model.ckpt'\n",
-      "[3600/8500] cost: 1.2161 / Each batch learning took 0.2962 sec\n",
-      "[3700/8500] cost: 1.2503 / Each batch learning took 0.2857 sec\n",
-      "[3800/8500] cost: 1.2463 / Each batch learning took 0.3070 sec\n",
-      "[3900/8500] cost: 1.1860 / Each batch learning took 0.2955 sec\n",
-      "[4000/8500] cost: 1.1900 / Each batch learning took 0.2937 sec\n",
-      "model saved to '/tmp/tf_logs/char_rnn_tutorial/model.ckpt'\n",
-      "[4100/8500] cost: 1.1675 / Each batch learning took 0.2903 sec\n",
-      "[4200/8500] cost: 1.1873 / Each batch learning took 0.3015 sec\n",
-      "[4300/8500] cost: 1.1567 / Each batch learning took 0.2934 sec\n",
-      "[4400/8500] cost: 1.1493 / Each batch learning took 0.3056 sec\n",
-      "[4500/8500] cost: 1.2055 / Each batch learning took 0.2816 sec\n",
-      "model saved to '/tmp/tf_logs/char_rnn_tutorial/model.ckpt'\n",
-      "[4600/8500] cost: 1.0576 / Each batch learning took 0.2912 sec\n",
-      "[4700/8500] cost: 1.1873 / Each batch learning took 0.2940 sec\n",
-      "[4800/8500] cost: 1.1531 / Each batch learning took 0.2897 sec\n",
-      "[4900/8500] cost: 1.1854 / Each batch learning took 0.2917 sec\n",
-      "[5000/8500] cost: 1.1876 / Each batch learning took 0.2932 sec\n",
-      "model saved to '/tmp/tf_logs/char_rnn_tutorial/model.ckpt'\n",
-      "[5100/8500] cost: 1.2030 / Each batch learning took 0.2901 sec\n",
-      "[5200/8500] cost: 1.1653 / Each batch learning took 0.2995 sec\n",
-      "[5300/8500] cost: 1.1551 / Each batch learning took 0.2879 sec\n",
-      "[5400/8500] cost: 1.1755 / Each batch learning took 0.3012 sec\n",
-      "[5500/8500] cost: 1.1766 / Each batch learning took 0.3049 sec\n",
-      "model saved to '/tmp/tf_logs/char_rnn_tutorial/model.ckpt'\n",
-      "[5600/8500] cost: 1.1267 / Each batch learning took 0.2905 sec\n",
-      "[5700/8500] cost: 1.1220 / Each batch learning took 0.3020 sec\n",
-      "[5800/8500] cost: 1.1072 / Each batch learning took 0.2842 sec\n",
-      "[5900/8500] cost: 1.1321 / Each batch learning took 0.3061 sec\n",
-      "[6000/8500] cost: 1.1001 / Each batch learning took 0.3040 sec\n",
-      "model saved to '/tmp/tf_logs/char_rnn_tutorial/model.ckpt'\n",
-      "[6100/8500] cost: 1.1001 / Each batch learning took 0.3061 sec\n",
-      "[6200/8500] cost: 1.1553 / Each batch learning took 0.2931 sec\n",
-      "[6300/8500] cost: 1.0116 / Each batch learning took 0.2822 sec\n",
-      "[6400/8500] cost: 1.1338 / Each batch learning took 0.2932 sec\n",
-      "[6500/8500] cost: 1.1052 / Each batch learning took 0.2968 sec\n",
-      "model saved to '/tmp/tf_logs/char_rnn_tutorial/model.ckpt'\n",
-      "[6600/8500] cost: 1.1432 / Each batch learning took 0.2896 sec\n",
-      "[6700/8500] cost: 1.1397 / Each batch learning took 0.2868 sec\n",
-      "[6800/8500] cost: 1.1515 / Each batch learning took 0.2954 sec\n",
-      "[6900/8500] cost: 1.1256 / Each batch learning took 0.3011 sec\n",
-      "[7000/8500] cost: 1.1195 / Each batch learning took 0.3018 sec\n",
-      "model saved to '/tmp/tf_logs/char_rnn_tutorial/model.ckpt'\n",
-      "[7100/8500] cost: 1.1319 / Each batch learning took 0.2862 sec\n",
-      "[7200/8500] cost: 1.1351 / Each batch learning took 0.3061 sec\n",
-      "[7300/8500] cost: 1.0912 / Each batch learning took 0.3022 sec\n",
-      "[7400/8500] cost: 1.0855 / Each batch learning took 0.2867 sec\n",
-      "[7500/8500] cost: 1.0742 / Each batch learning took 0.3055 sec\n",
-      "model saved to '/tmp/tf_logs/char_rnn_tutorial/model.ckpt'\n",
-      "[7600/8500] cost: 1.0955 / Each batch learning took 0.2961 sec\n",
-      "[7700/8500] cost: 1.0645 / Each batch learning took 0.2901 sec\n",
-      "[7800/8500] cost: 1.0657 / Each batch learning took 0.3037 sec\n",
-      "[7900/8500] cost: 1.1221 / Each batch learning took 0.3008 sec\n",
-      "[8000/8500] cost: 0.9845 / Each batch learning took 0.2998 sec\n",
-      "model saved to '/tmp/tf_logs/char_rnn_tutorial/model.ckpt'\n",
-      "[8100/8500] cost: 1.0992 / Each batch learning took 0.2916 sec\n",
-      "[8200/8500] cost: 1.0764 / Each batch learning took 0.3131 sec\n",
-      "[8300/8500] cost: 1.1159 / Each batch learning took 0.2843 sec\n",
-      "[8400/8500] cost: 1.1120 / Each batch learning took 0.2877 sec\n"
+      "[0/8500] cost: 5.1518 / Each batch learning took 6.2978 sec\n",
+      "model saved to 'data/linux_kernel/model.ckpt'\n",
+      "[100/8500] cost: 3.0705 / Each batch learning took 0.3866 sec\n",
+      "[200/8500] cost: 2.5382 / Each batch learning took 0.3910 sec\n",
+      "[300/8500] cost: 2.3884 / Each batch learning took 0.5311 sec\n",
+      "[400/8500] cost: 2.2029 / Each batch learning took 0.3930 sec\n",
+      "[500/8500] cost: 1.9560 / Each batch learning took 0.5088 sec\n",
+      "model saved to 'data/linux_kernel/model.ckpt'\n",
+      "[600/8500] cost: 1.9134 / Each batch learning took 0.3861 sec\n",
+      "[700/8500] cost: 1.7579 / Each batch learning took 0.5502 sec\n",
+      "[800/8500] cost: 1.7580 / Each batch learning took 0.4546 sec\n",
+      "[900/8500] cost: 1.6952 / Each batch learning took 0.3958 sec\n",
+      "[1000/8500] cost: 1.5991 / Each batch learning took 0.4516 sec\n",
+      "model saved to 'data/linux_kernel/model.ckpt'\n",
+      "[1100/8500] cost: 1.6036 / Each batch learning took 0.3708 sec\n",
+      "[1200/8500] cost: 1.4374 / Each batch learning took 0.4035 sec\n",
+      "[1300/8500] cost: 1.5513 / Each batch learning took 0.4629 sec\n",
+      "[1400/8500] cost: 1.4814 / Each batch learning took 0.5162 sec\n",
+      "[1500/8500] cost: 1.4986 / Each batch learning took 0.4023 sec\n",
+      "model saved to 'data/linux_kernel/model.ckpt'\n",
+      "[1600/8500] cost: 1.4957 / Each batch learning took 0.5584 sec\n",
+      "[1700/8500] cost: 1.4569 / Each batch learning took 0.5504 sec\n",
+      "[1800/8500] cost: 1.3966 / Each batch learning took 0.4409 sec\n",
+      "[1900/8500] cost: 1.3742 / Each batch learning took 0.8715 sec\n",
+      "[2000/8500] cost: 1.4071 / Each batch learning took 0.7707 sec\n",
+      "model saved to 'data/linux_kernel/model.ckpt'\n",
+      "[2100/8500] cost: 1.4037 / Each batch learning took 0.4636 sec\n",
+      "[2200/8500] cost: 1.3220 / Each batch learning took 0.6967 sec\n",
+      "[2300/8500] cost: 1.3267 / Each batch learning took 0.7644 sec\n",
+      "[2400/8500] cost: 1.2870 / Each batch learning took 0.5228 sec\n",
+      "[2500/8500] cost: 1.3171 / Each batch learning took 0.5671 sec\n",
+      "model saved to 'data/linux_kernel/model.ckpt'\n",
+      "[2600/8500] cost: 1.2876 / Each batch learning took 0.5576 sec\n",
+      "[2700/8500] cost: 1.2571 / Each batch learning took 0.4314 sec\n",
+      "[2800/8500] cost: 1.3123 / Each batch learning took 0.5939 sec\n",
+      "[2900/8500] cost: 1.1588 / Each batch learning took 0.6087 sec\n",
+      "[3000/8500] cost: 1.2834 / Each batch learning took 0.5066 sec\n",
+      "model saved to 'data/linux_kernel/model.ckpt'\n",
+      "[3100/8500] cost: 1.2362 / Each batch learning took 0.4319 sec\n",
+      "[3200/8500] cost: 1.2768 / Each batch learning took 0.4418 sec\n",
+      "[3300/8500] cost: 1.2836 / Each batch learning took 0.6158 sec\n",
+      "[3400/8500] cost: 1.2830 / Each batch learning took 0.7412 sec\n",
+      "[3500/8500] cost: 1.2296 / Each batch learning took 0.7596 sec\n",
+      "model saved to 'data/linux_kernel/model.ckpt'\n",
+      "[3600/8500] cost: 1.2142 / Each batch learning took 0.8046 sec\n",
+      "[3700/8500] cost: 1.2474 / Each batch learning took 0.8149 sec\n",
+      "[3800/8500] cost: 1.2455 / Each batch learning took 0.9514 sec\n",
+      "[3900/8500] cost: 1.1910 / Each batch learning took 1.0230 sec\n",
+      "[4000/8500] cost: 1.1874 / Each batch learning took 0.7037 sec\n",
+      "model saved to 'data/linux_kernel/model.ckpt'\n",
+      "[4100/8500] cost: 1.1602 / Each batch learning took 0.6907 sec\n",
+      "[4200/8500] cost: 1.1896 / Each batch learning took 0.6589 sec\n",
+      "[4300/8500] cost: 1.1680 / Each batch learning took 0.6051 sec\n",
+      "[4400/8500] cost: 1.1472 / Each batch learning took 0.4314 sec\n",
+      "[4500/8500] cost: 1.2073 / Each batch learning took 0.7571 sec\n",
+      "model saved to 'data/linux_kernel/model.ckpt'\n",
+      "[4600/8500] cost: 1.0601 / Each batch learning took 0.8487 sec\n",
+      "[4700/8500] cost: 1.1822 / Each batch learning took 0.5197 sec\n",
+      "[4800/8500] cost: 1.1427 / Each batch learning took 0.5184 sec\n",
+      "[4900/8500] cost: 1.1774 / Each batch learning took 0.4620 sec\n",
+      "[5000/8500] cost: 1.1902 / Each batch learning took 0.4941 sec\n",
+      "model saved to 'data/linux_kernel/model.ckpt'\n",
+      "[5100/8500] cost: 1.1960 / Each batch learning took 0.7985 sec\n",
+      "[5200/8500] cost: 1.1568 / Each batch learning took 0.7381 sec\n",
+      "[5300/8500] cost: 1.1487 / Each batch learning took 0.5911 sec\n",
+      "[5400/8500] cost: 1.1710 / Each batch learning took 0.8420 sec\n",
+      "[5500/8500] cost: 1.1684 / Each batch learning took 0.7788 sec\n",
+      "model saved to 'data/linux_kernel/model.ckpt'\n",
+      "[5600/8500] cost: 1.1337 / Each batch learning took 0.7290 sec\n",
+      "[5700/8500] cost: 1.1234 / Each batch learning took 1.0153 sec\n",
+      "[5800/8500] cost: 1.1034 / Each batch learning took 0.7469 sec\n",
+      "[5900/8500] cost: 1.1276 / Each batch learning took 0.7259 sec\n",
+      "[6000/8500] cost: 1.1073 / Each batch learning took 0.7722 sec\n",
+      "model saved to 'data/linux_kernel/model.ckpt'\n",
+      "[6100/8500] cost: 1.0955 / Each batch learning took 0.7700 sec\n",
+      "[6200/8500] cost: 1.1489 / Each batch learning took 0.4165 sec\n",
+      "[6300/8500] cost: 1.0120 / Each batch learning took 0.7359 sec\n",
+      "[6400/8500] cost: 1.1296 / Each batch learning took 0.6871 sec\n",
+      "[6500/8500] cost: 1.0963 / Each batch learning took 0.6530 sec\n",
+      "model saved to 'data/linux_kernel/model.ckpt'\n",
+      "[6600/8500] cost: 1.1259 / Each batch learning took 0.4506 sec\n",
+      "[6700/8500] cost: 1.1422 / Each batch learning took 0.3957 sec\n",
+      "[6800/8500] cost: 1.1431 / Each batch learning took 0.4530 sec\n",
+      "[6900/8500] cost: 1.1168 / Each batch learning took 0.4068 sec\n",
+      "[7000/8500] cost: 1.1119 / Each batch learning took 1.0343 sec\n",
+      "model saved to 'data/linux_kernel/model.ckpt'\n",
+      "[7100/8500] cost: 1.1255 / Each batch learning took 0.4080 sec\n",
+      "[7200/8500] cost: 1.1266 / Each batch learning took 0.3840 sec\n",
+      "[7300/8500] cost: 1.1036 / Each batch learning took 0.8628 sec\n",
+      "[7400/8500] cost: 1.0860 / Each batch learning took 0.4150 sec\n",
+      "[7500/8500] cost: 1.0681 / Each batch learning took 0.4738 sec\n",
+      "model saved to 'data/linux_kernel/model.ckpt'\n",
+      "[7600/8500] cost: 1.0921 / Each batch learning took 0.4141 sec\n",
+      "[7700/8500] cost: 1.0728 / Each batch learning took 0.3944 sec\n",
+      "[7800/8500] cost: 1.0644 / Each batch learning took 0.4473 sec\n",
+      "[7900/8500] cost: 1.1155 / Each batch learning took 0.4841 sec\n",
+      "[8000/8500] cost: 0.9819 / Each batch learning took 0.4198 sec\n",
+      "model saved to 'data/linux_kernel/model.ckpt'\n",
+      "[8100/8500] cost: 1.0945 / Each batch learning took 0.4452 sec\n",
+      "[8200/8500] cost: 1.0682 / Each batch learning took 0.4038 sec\n",
+      "[8300/8500] cost: 1.0939 / Each batch learning took 0.4889 sec\n",
+      "[8400/8500] cost: 1.1111 / Each batch learning took 0.3995 sec\n"
      ]
     }
    ],
@@ -517,7 +514,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Done!! It took 2742.1876 second. \n"
+      "Done!! It took 5238.4040 second. \n"
      ]
     }
    ],
