--- a/notebooks/char_rnn_train_tutorial.ipynb
+++ b/notebooks/char_rnn_train_tutorial.ipynb
@@ -89,7 +89,7 @@
     "       % (type(counter.items()), len(counter.items()))) \n",
     "for i in range(5):\n",
     "    print (\"[%d/%d]\" % (i, 3)), # <= This comma remove '\\n'\n",
-    "    print (counter.items()[i])\n",
+    "    print (list(counter.items())[i])\n",
     "\n",
     "print (\" \")\n",
     "print (\"Type of 'count_pairs' is %s and length is %d\" \n",
@@ -340,7 +340,7 @@
    "execution_count": 8,
    "metadata": {
     "collapsed": false,
-    "scrolled": false
+    "scrolled": true
    },
    "outputs": [
     {
