TextLoader Unicode Issue Fix
change loading function in TextLoader from open to codecs.open
for loading unicode text input files

--- a/notebooks/char_rnn_train_hangul.ipynb
+++ b/notebooks/char_rnn_train_hangul.ipynb
@@ -34,26 +34,27 @@
    "cell_type": "code",
    "execution_count": 2,
    "metadata": {
-    "collapsed": false
+    "collapsed": false,
+    "scrolled": false
    },
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "loading preprocessed files\n",
-      "type of 'data_loader' is <type 'dict'>, length is 78\n",
+      "reading text file\n",
+      "type of 'data_loader' is <type 'dict'>, length is 76\n",
       "\n",
       "\n",
       "data_loader.vocab looks like \n",
-      "{'\\x81': 15, '\\x80': 53, '\\x83': 49, '\\x82': 20, '\\x85': 1, '\\x84': 5, '\\x87': 7, '\\x86': 25, '\\x89': 43, '\\x88': 18, '\\x8b': 45, '\\n': 22, '\\x8d': 34, '\\x8c': 33, '\\x8f': 8, '\\x8e': 17, '\\x91': 37, '\\x90': 24, '\\x93': 14, '\\x92': 74, '\\x95': 21, '\\x94': 23, '\\x97': 13, '\\x96': 42, '\\x99': 55, '\\x98': 29, '\\x9b': 41, '\\x9a': 36, '\\x9d': 39, '\\x9c': 19, '\\x9f': 38, '\\x9e': 63, '\\xa1': 12, ' ': 6, '\\xa3': 10, '\\xa2': 28, '\\xa5': 3, \"'\": 51, '>': 77, ')': 48, '(': 47, '-': 67, ',': 30, '.': 27, '\\xb1': 11, '0': 75, '\\xb3': 64, '\\xb2': 32, '\\xb5': 52, '\\xb4': 2, '\\xb7': 16, '\\xb6': 46, '\\xb9': 9, '\\xb8': 35, '\\xbb': 57, '\\xba': 50, '\\xbc': 56, '?': 44, '4': 69, '!': 54, '\\x8a': 26, '7': 71, '\\xa0': 40, '6': 61, '3': 68, '9': 66, '\"': 31, '8': 70, '2': 62, '_': 73, '\\xe1': 4, '\\xe3': 0, ':': 59, '\\x1a': 76, '1': 60, '\\xbf': 58, '\\xbe': 72, '5': 65} \n",
+      "{u'_': 69, u'6': 59, u':': 57, u'\\n': 19, u'4': 67, u'5': 63, u'>': 75, u'!': 52, u' ': 1, u'\"': 28, u'\\u1d25': 0, u\"'\": 49, u')': 46, u'(': 45, u'-': 65, u',': 27, u'.': 24, u'\\u3131': 7, u'0': 73, u'\\u3133': 60, u'\\u3132': 29, u'\\u3135': 50, u'\\u3134': 4, u'\\u3137': 13, u'\\u3136': 44, u'\\u3139': 5, u'\\u3138': 32, u'\\u313b': 55, u'\\u313a': 48, u'\\u313c': 54, u'?': 41, u'3': 66, u'\\u3141': 12, u'\\u3140': 51, u'\\u3143': 47, u'\\u3142': 17, u'\\u3145': 10, u'\\u3144': 43, u'\\u3147': 2, u'\\u3146': 22, u'\\u3149': 40, u'\\u3148': 15, u'\\u314b': 42, u'\\u314a': 23, u'\\u314d': 31, u'\\u314c': 30, u'\\u314f': 3, u'\\u314e': 14, u'\\u3151': 34, u'\\u3150': 21, u'\\u3153': 11, u'\\u3152': 74, u'\\u3155': 18, u'\\u3154': 20, u'\\u3157': 9, u'\\u3156': 39, u'\\u3159': 53, u'\\u3158': 26, u'\\u315b': 38, u'\\u315a': 33, u'\\u315d': 36, u'\\u315c': 16, u'\\u315f': 35, u'\\u315e': 61, u'\\u3161': 8, u'\\u3160': 37, u'\\u3163': 6, u'\\u3162': 25, u'\\x1a': 72, u'9': 64, u'7': 71, u'2': 62, u'1': 58, u'\\u313f': 56, u'\\u313e': 70, u'8': 68} \n",
       "\n",
       "\n",
-      "type of 'data_loader.chars' is <type 'tuple'>, length is 78\n",
+      "type of 'data_loader.chars' is <type 'tuple'>, length is 76\n",
       "\n",
       "\n",
       "data_loader.chars looks like \n",
-      "('\\xe3', '\\x85', '\\xb4', '\\xa5', '\\xe1', '\\x84', ' ', '\\x87', '\\x8f', '\\xb9', '\\xa3', '\\xb1', '\\xa1', '\\x97', '\\x93', '\\x81', '\\xb7', '\\x8e', '\\x88', '\\x9c', '\\x82', '\\x95', '\\n', '\\x94', '\\x90', '\\x86', '\\x8a', '.', '\\xa2', '\\x98', ',', '\"', '\\xb2', '\\x8c', '\\x8d', '\\xb8', '\\x9a', '\\x91', '\\x9f', '\\x9d', '\\xa0', '\\x9b', '\\x96', '\\x89', '?', '\\x8b', '\\xb6', '(', ')', '\\x83', '\\xba', \"'\", '\\xb5', '\\x80', '!', '\\x99', '\\xbc', '\\xbb', '\\xbf', ':', '1', '6', '2', '\\x9e', '\\xb3', '5', '9', '-', '3', '4', '8', '7', '\\xbe', '_', '\\x92', '0', '\\x1a', '>') \n"
+      "(u'\\u1d25', u' ', u'\\u3147', u'\\u314f', u'\\u3134', u'\\u3139', u'\\u3163', u'\\u3131', u'\\u3161', u'\\u3157', u'\\u3145', u'\\u3153', u'\\u3141', u'\\u3137', u'\\u314e', u'\\u3148', u'\\u315c', u'\\u3142', u'\\u3155', u'\\n', u'\\u3154', u'\\u3150', u'\\u3146', u'\\u314a', u'.', u'\\u3162', u'\\u3158', u',', u'\"', u'\\u3132', u'\\u314c', u'\\u314d', u'\\u3138', u'\\u315a', u'\\u3151', u'\\u315f', u'\\u315d', u'\\u3160', u'\\u315b', u'\\u3156', u'\\u3149', u'?', u'\\u314b', u'\\u3144', u'\\u3136', u'(', u')', u'\\u3143', u'\\u313a', u\"'\", u'\\u3135', u'\\u3140', u'!', u'\\u3159', u'\\u313c', u'\\u313b', u'\\u313f', u':', u'1', u'6', u'\\u3133', u'\\u315e', u'2', u'5', u'9', u'-', u'3', u'4', u'8', u'_', u'\\u313e', u'7', u'\\x1a', u'0', u'\\u3152', u'>') \n"
      ]
     }
    ],
@@ -78,7 +79,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "metadata": {
     "collapsed": false
    },
@@ -156,7 +157,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "0/27500 (epoch: 0), loss: 5.567, time/batch: 2.846\n",
+      "0/9950 (epoch: 0), loss: 4.893, time/batch: 8.269\n",
       "model saved to /tmp/tf_logs/char_rnn_hangul/model.ckpt\n"
      ]
     }
@@ -201,6 +202,15 @@
     "                       , global_step = e * data_loader.num_batches + b)\n",
     "            print(\"model saved to {}\".format(checkpoint_path))\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "collapsed": true
+   },
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
@@ -219,7 +229,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython2",
-   "version": "2.7.6"
+   "version": "2.7.11"
   }
  },
  "nbformat": 4,
